Linux/firewall
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <title>방화벽 정책 | TIL wiki</title>
    <meta name="generator" content="VuePress 1.8.2">
    
    <meta name="description" content="">
    
    <link rel="preload" href="/wiki/assets/css/0.styles.a415fee5.css" as="style"><link rel="preload" href="/wiki/assets/js/app.8c48789a.js" as="script"><link rel="preload" href="/wiki/assets/js/2.ffb6456b.js" as="script"><link rel="preload" href="/wiki/assets/js/122.9b5b7643.js" as="script"><link rel="prefetch" href="/wiki/assets/js/10.fb9aa7f4.js"><link rel="prefetch" href="/wiki/assets/js/100.1f13a518.js"><link rel="prefetch" href="/wiki/assets/js/101.3e937700.js"><link rel="prefetch" href="/w [...]
    <link rel="stylesheet" href="/wiki/assets/css/0.styles.a415fee5.css">
  </head>
  <body>
    <div id="app" data-server-rendered="true"><div class="theme-container"><header class="navbar"><div class="sidebar-button"><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="img" viewBox="0 0 448 512" class="icon"><path fill="currentColor" d="M436 124H12c-6.627 0-12-5.373-12-12V80c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c-6.627 0-12-5.373-12-12v-32c0-6.627 5.373-12 12-12h424c6.627 0 12 5.373 12 12v32c0 6.627-5.373 12-12 12zm0 160H12c- [...]
    GitHub
    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens n [...]
    GitHub
    <span><svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg> <span class="sr-only">(opens n [...]
systemctl <span class="token builtin class-name">enable</span> firewalld
systemctl stop firewalld
systemctl disable firewalld
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br></div></div></li></ul> <h2 id="ubuntu"><a href="#ubuntu" class="header-anchor">#</a> Ubuntu</h2> <p>우분투의 기본 방화벽은 ufw이다. ufw의 gui버전인 Gufw를 사용할 수도 있다.</p> <p>설정파일은 <code>/etc/ufw/</code> 경로에서 확인할 수 있다.</p> <h3 id="기본문법"><a href="#기본문법" class="header-anchor">#</a> 기본문법</h3> <ul><li><p>활성화 [...]
-A ufw-before-input -p icmp --icmp-type destination-unreachable -j ACCEPT
-A ufw-before-input -p icmp --icmp-type source-quench -j ACCEPT
-A ufw-before-input -p icmp --icmp-type time-exceeded -j ACCEPT
-A ufw-before-input -p icmp --icmp-type parameter-problem -j ACCEPT
-A ufw-before-input -p icmp --icmp-type echo-request -j ACCEPT

or change the &quot;ACCEPT&quot; to &quot;DROP&quot;

# ok icmp codes
-A ufw-before-input -p icmp --icmp-type destination-unreachable -j DROP
-A ufw-before-input -p icmp --icmp-type source-quench -j DROP
-A ufw-before-input -p icmp --icmp-type time-exceeded -j DROP
-A ufw-before-input -p icmp --icmp-type parameter-problem -j DROP
-A ufw-before-input -p icmp --icmp-type echo-request -j DROP
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br><span class="line-number">6</span><br><span class="line-number">7</span><br><span class="line-number">8</span><br><span class="line-number">9</span><br><span class="line-number">10</span><br><span class="line-number">11</span><br><span class="line-number">12</sp [...]
<span class="token function">sudo</span> ufw deny from <span class="token number">192.168</span>.0.7 to any port <span class="token number">22</span>
<span class="token function">sudo</span> ufw allow from <span class="token number">192.168</span>.0.0/24 to any port <span class="token number">22</span> proto tcp
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br></div></div><p>세부사항의 룰을 우선 선언하고, 일반 룰은 나중에 선언해야 한다. 룰을 해석하면 이에 matching 하는 다른 룰은 해석하지 않기 때문이다.</p> <div class="language-sh line-numbers-mode"><pre class="language-sh"><code><span class="token function">sudo</span> ufw status

To                         Action  From
--                         ------  ----
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.7
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.7
<span class="token number">22</span>:tcp                     ALLOW   <span class="token number">192.168</span>.0.0/24
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br><span class="line-number">6</span><br><span class="line-number">7</span><br><span class="line-number">8</span><br><span class="line-number">9</span><br></div></div><p>192.168.0.3 주소의 22번 포트요청을 추가로 막으려는 경우</p> <div class="language-sh line-numbers-mode"><pre class [...]
<span class="token function">sudo</span> ufw status

To                         Action  From
--                         ------  ----
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.7
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.7
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br><span class="line-number">6</span><br><span class="line-number">7</span><br><span class="line-number">8</span><br><span class="line-number">9</span><br></div></div><p>일반 룰을 우선 삭제하고 다시 세부룰을 추가한 뒤, 일반 룰을 다시 추가한다</p> <div class="language-sh line-numbers-mode"><pre  [...]
<span class="token function">sudo</span> ufw allow <span class="token number">192.168</span>.0.0/24 to any port <span class="token number">22</span> proto tcp
<span class="token function">sudo</span> ufw status

To                         Action  From
--                         ------  ----
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.1
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.7
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.7
<span class="token number">22</span>:tcp                     DENY    <span class="token number">192.168</span>.0.3
<span class="token number">22</span>:udp                     DENY    <span class="token number">192.168</span>.0.3
<span class="token number">22</span>:tcp                     ALLOW   <span class="token number">192.168</span>.0.0/24
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br><span class="line-number">2</span><br><span class="line-number">3</span><br><span class="line-number">4</span><br><span class="line-number">5</span><br><span class="line-number">6</span><br><span class="line-number">7</span><br><span class="line-number">8</span><br><span class="line-number">9</span><br><span class="line-number">10</span><br><span class="line-number">11</span><br><span class="line-number">12</sp [...]
</code></pre> <div class="line-numbers-wrapper"><span class="line-number">1</span><br></div></div><ul><li>Date: It's good practice to watch the dates and times. If things are out of order or blocks of time are missing then an attacker probably messed with your logs.</li> <li>Hostname: The server’s hostname</li> <li>Uptime: The time in seconds since boot.</li></ul> <h3 id="logged-event-용어에-관한-설명"><a href="#logged-event-용어에-관한-설명" class="header-anchor">#</a> logged event 용어 [...]
    <script src="/wiki/assets/js/app.8c48789a.js" defer></script><script src="/wiki/assets/js/2.ffb6456b.js" defer></script><script src="/wiki/assets/js/122.9b5b7643.js" defer></script>
  </body>
</html>
